<resources>
    <string name="app_name">Tamin6</string>

    <string name="task_title_lable">Title</string>
    <string name="task_description_lable">Description</string>
    <string name="task_Date_lable">Date</string>
    <string name="task_time_lable">Time</string>
    <string name="task_done_lable">Task Done</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_title_hint">Enter new task title</string>
    <string name="task_description_hint">Enter  task description here</string>

    <string name="date_picker_title">Date of task:</string>
    <string name="time_picker_title">time of task:</string>
    <string name="save_button_text">save</string>
    <string name="dont_have_any_task">You Dont Have Any Task</string>
    <string name="description_lable">Description</string>
    <string name="date_lable">DATE :</string>
    <string name="time_lable">TIME :</string>
    <string name="not_nuul_mesege">Please Enter The Task Name and press Save For Back</string>
    <string name="name_task_lable">NAME:</string>
</resources>
