<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context="com.example.reza66.tamin6.EditFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_task_lable" />

        <TextView
            android:id="@+id/task_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/description_lable"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/descrip_text"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="2"
        android:verticalScrollbarPosition="left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">


        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/date_lable" />

        <TextView
            android:id="@+id/date_text"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        >

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/time_lable" />

        <TextView
            android:id="@+id/time_text"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="5">

        <Button
            android:id="@+id/edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:drawableStart="@android:drawable/ic_menu_edit"
            android:text="Edit" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:drawableStart="@android:drawable/ic_menu_delete"
            android:text="Delete" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:drawableStart="@android:drawable/checkbox_on_background"
            android:text="Done" />
    </LinearLayout>

</LinearLayout>
